Fix group content merge into radio, validation and dirty icon alignment

--- a/src/ids-base/ids-dirty-tracker-mixin.scss
+++ b/src/ids-base/ids-dirty-tracker-mixin.scss
@@ -10,6 +10,11 @@
 .ids-radio-group {
   .icon-dirty {
     margin: 1px 0 0 -2px;
+
+    &.radio-focused {
+      margin: -1px 0 0 -3px;
+      z-index: 1;
+    }
   }
 }
 
