--- a/src/ids-base/ids-validation-mixin.scss
+++ b/src/ids-base/ids-validation-mixin.scss
@@ -15,8 +15,9 @@
   }
 
   .ids-icon {
-    @include mb-4();
     @include mr-4();
+
+    margin-bottom: 6px;
   }
 
   &.alert {
